Refactor Zone entity to use GeoJSON geometry representation
- Removed the GeoPoint class and updated the Zone class to replace coordinates and center fields with a single geometry field of type GeoJsonGeometry.
- Introduced new GeoJsonGeometry, GeoJsonPoint, and GeoJsonPolygon classes to model GeoJSON structures.
- Updated ZoneRepository to handle serialization and deserialization of the new geometry field.
- Modified the database schema to reflect the changes, replacing coordinates, radius, and center with a geometry field.
- Adjusted ZoneServiceTest to validate the new geometry structure and ensure proper functionality.