@@ -14,8 +14,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 
-import gr.imsi.athenarc.xtremexpvisapi.domain.queryV2.params.GeoPoint;
 import gr.imsi.athenarc.xtremexpvisapi.domain.queryV2.params.Zone;
+import gr.imsi.athenarc.xtremexpvisapi.domain.queryV2.params.geojson.GeoJsonPoint;
 import gr.imsi.athenarc.xtremexpvisapi.repository.ZoneRepository;
 
 @ExtendWith(MockitoExtension.class)
@@ -438,7 +438,7 @@ class ZoneServiceTest {
         zone.setName("Zone with Rectangle");
         
         // Note: Rectangle uses Range<Float> for lon/lat, so we'll test with a simple case
-        zone.setCoordinates(Arrays.asList(new GeoPoint(0.0, 0.0)));
+        zone.setGeometry(new GeoJsonPoint(List.of(0.0, 0.0)));
         
         // Mock repository behavior
         when(zoneRepository.findAll()).thenReturn(Arrays.asList());
@@ -450,10 +450,11 @@ class ZoneServiceTest {
         // Assert
         assertNotNull(savedZone.getId());
         assertTrue(savedZone.getId().startsWith("zone_"));
-        assertNotNull(savedZone.getCoordinates());
-        assertEquals(1, savedZone.getCoordinates().size());
-        assertEquals(0.0, savedZone.getCoordinates().get(0).getLat());
-        assertEquals(0.0, savedZone.getCoordinates().get(0).getLon());
+        assertNotNull(savedZone.getGeometry());
+        assertTrue(savedZone.getGeometry() instanceof GeoJsonPoint);
+        GeoJsonPoint geometryPoint = (GeoJsonPoint) savedZone.getGeometry();
+        assertEquals(0.0, geometryPoint.getCoordinates().get(0));
+        assertEquals(0.0, geometryPoint.getCoordinates().get(1));
         
         // Verify repository was called
         verify(zoneRepository).findAll();
@@ -501,7 +502,7 @@ class ZoneServiceTest {
         zone.setType("commercial");
         zone.setStatus("active");
         zone.setDescription("A complete zone with all fields");
-        zone.setCoordinates(Arrays.asList(new GeoPoint(0.0, 0.0)));
+        zone.setGeometry(new GeoJsonPoint(List.of(0.0, 0.0)));
         
         Double[] heights = {50.0, 75.0, 100.0};
         zone.setHeights(heights);
@@ -522,10 +523,11 @@ class ZoneServiceTest {
         assertEquals("active", savedZone.getStatus());
         assertEquals("A complete zone with all fields", savedZone.getDescription());
         assertNotNull(savedZone.getCreatedAt());
-        assertNotNull(savedZone.getCoordinates());
-        assertEquals(1, savedZone.getCoordinates().size());
-        assertEquals(0.0, savedZone.getCoordinates().get(0).getLat());
-        assertEquals(0.0, savedZone.getCoordinates().get(0).getLon());
+        assertNotNull(savedZone.getGeometry());
+        assertTrue(savedZone.getGeometry() instanceof GeoJsonPoint);
+        GeoJsonPoint geometryPoint = (GeoJsonPoint) savedZone.getGeometry();
+        assertEquals(0.0, geometryPoint.getCoordinates().get(0));
+        assertEquals(0.0, geometryPoint.getCoordinates().get(1));
         assertNotNull(savedZone.getHeights());
         assertEquals(3, savedZone.getHeights().length);
         
